--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		<h1>Login Form</h1>
+	<form>
+	<label for="username">username:</label>
+	<input type="text" placeholder="Username" required id="username"> <br>
+	<label for="password">password:</label>
+	<input type="password" placeholder="Password" required id="password"> <br>
+	<label for="checkbox">Remember me:</label>
+	<input type="checkbox" id="checkbox"><br>
+	<input type="submit" id="submit" value="Submit">
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
