--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 		<h1>Login Form</h1>
 	<form>
-	<label for="username">username:</label>
+	<label for="username">Username:</label>
 	<input type="text" placeholder="Username" required id="username"> <br>
-	<label for="password">password:</label>
+	<label for="password">Password:</label>
 	<input type="password" placeholder="Password" required id="password"> <br>
 	<label for="checkbox">Remember me:</label>
 	<input type="checkbox" id="checkbox"><br>
